--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Ko's Website
 email: ko.ishida@astr.tohoku.ac.jp
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  in prepairation
 domain: isdko.github.io
 baseurl: /myweb/ # the subpath of your site, e.g. /blog
 url: https://isdko.github.io # the base hostname & protocol for your site, e.g. http://example.com
